k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments 
  template:
    metadata:
      labels:
        app: comments 
    spec:
      containers:
        - name: comments 
          image: furkanh/blog-comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  selector:
    app: comments 
  ports:
    - name: comments
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-postgres 
  template:
    metadata:
      labels:
        app: comments-postgres
    spec:
      containers:
        - name: comments-postgres
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: comments-postgres-service
spec:
  type: ClusterIP
  selector:
    app: comments-postgres 
  ports:
    - name: comments-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
