k8s/feed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed 
  template:
    metadata:
      labels:
        app: feed 
    spec:
      containers:
        - name: feed 
          image: furkanh/blog-feed
---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  type: ClusterIP
  selector:
    app: feed 
  ports:
    - name: feed
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-postgres 
  template:
    metadata:
      labels:
        app: feed-postgres
    spec:
      containers:
        - name: feed-postgres
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: feed-postgres-service
spec:
  type: ClusterIP
  selector:
    app: feed-postgres 
  ports:
    - name: feed-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
