k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts 
  template:
    metadata:
      labels:
        app: posts 
    spec:
      containers:
        - name: posts 
          image: furkanh/blog-posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: ClusterIP
  selector:
    app: posts 
  ports:
    - name: posts
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-postgres 
  template:
    metadata:
      labels:
        app: posts-postgres
    spec:
      containers:
        - name: posts-postgres
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: posts-postgres-service
spec:
  type: ClusterIP
  selector:
    app: posts-postgres 
  ports:
    - name: posts-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
